# ai-news

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  home.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/ai_news/: st_util.py
src/ai_news/news/: __init__.py  news.py  util.py
src/ai_news/rag/: data.py  index.py  vector_db.py
